@startuml

title __SRC's Class Diagram__\n

  package  {
    class DataLayer {
        - statement : Statement
        - conn : Connection
        - userArray : JSONArray
        - userParam : JSONObject
        - busArray : JSONArray
        - busParam : JSONObject
        - jobArray : JSONArray
        - jobParam : JSONObject
        - dUsername : String
        - dPassword : String
        - counter : int
        - rows : int
        # DataLayer()
        + UserSignIn()
        + GetUser()
        + AddUser()
        + GetAllUsers()
        + EditUsers()
        + DeleteUsers()
        + AllBuses()
        + GetBus()
        + AddBus()
        + EditBus()
        + DeleteBus()
        + AllDrivers()
        + GetDriver()
        + AddJob()
        + AllJobs()
        + GetJob()
        + DeleteJob()
        + EditJob()
    }
  }
  

  package  {
    interface IDataLayer {
        {abstract} + UserSignIn()
        {abstract} + AddUser()
        {abstract} + EditUsers()
        {abstract} + DeleteUsers()
        {abstract} + GetAllUsers()
        {abstract} + GetUser()
        {abstract} + AddBus()
        {abstract} + EditBus()
        {abstract} + DeleteBus()
        {abstract} + AllBuses()
        {abstract} + GetBus()
        {abstract} + AllDrivers()
        {abstract} + GetDriver()
        {abstract} + AddJob()
        {abstract} + AllJobs()
        {abstract} + GetJob()
        {abstract} + DeleteJob()
        {abstract} + EditJob()
    }
  }
  

  package  {
    class ServerRun {
        {static} + isRegistered : boolean
        {static} + service : IDataLayer
        {static} + main()
    }
  }
  

  DataLayer -up-|> IDataLayer
  DataLayer -up-|> UnicastRemoteObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
